<resources>
    <string name="app_name">Rick and Morty</string>
    <string name="characters_bottom_menu">Characters</string>
    <string name="locations_bottom_menu">Locations</string>
    <string name="episodes_bottom_menu">Episodes</string>
    <string name="name">Name:</string>
    <string name="species">Species:</string>
    <string name="status">Status:</string>
    <string name="gender">Gender:</string>
    <string name="type">Type:</string>
    <string name="filterby">FilterBy:</string>
    <string name="character_name">character name..</string>
    <string name="alive">alive</string>
    <string name="dead">dead</string>
    <string name="unknown">unknown</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="genderless">genderless</string>
    <string name="human">human</string>
    <string name="alien">alien</string>
    <string name="poopybutthole">poopybutthole</string>
    <string name="humanoid">humanoid</string>
    <string name="mythological_creature">mythological creature</string>
    <string name="robot">robot</string>
    <string name="animal">animal</string>
    <string name="cronenberg">cronenberg</string>
    <string name="disease">disease</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="origin">Origin:</string>
    <string name="location">Location:</string>
    <string name="created">Created:</string>
    <string name="character_imageview">character_imageview</string>
    <string name="episode">Episode:</string>
    <string name="url">URL:</string>
    <string name="image">Image:</string>
    <string name="air_date">Air date:</string>
    <string name="episode_name">episode name…</string>
    <string name="episode_number">episode number…</string>
    <string name="id">ID:</string>
    <string name="episode_characters">Characters:</string>
    <string name="dimension">Dimension:</string>
    <string name="location_name">location name…</string>
    <string name="planet">planet</string>
    <string name="cluster">cluster</string>
    <string name="space_station">space station</string>
    <string name="microverse">microverse</string>
    <string name="tv">tv</string>
    <string name="resort">resort</string>
    <string name="fantasy_town">fantasy town</string>
    <string name="dream">dream</string>
    <string name="dimension_type">dimension</string>
    <string name="menagerie">menagerie</string>
    <string name="game">game</string>
    <string name="customs">customs</string>
    <string name="daycare">daycare</string>
    <string name="dwarf_planet">dwarf planet</string>
    <string name="teenyverse">teenyverse</string>
    <string name="box">box</string>
    <string name="spacecraft">spacecraft</string>
    <string name="artificially_generated_world">artificially generated world</string>
    <string name="machine">machine</string>
    <string name="arcade">arcade</string>
    <string name="spa">spa</string>
    <string name="quadrant">quadrant</string>
    <string name="quasar">quasar</string>
    <string name="mount">mount</string>
    <string name="liquid">liquid</string>
    <string name="convention">convention</string>
    <string name="woods">woods</string>
    <string name="diegesis">diegesis</string>
    <string name="non_diegetic_alternative_reality">non-diegetic alternative reality</string>
    <string name="nightmare">nightmare</string>
    <string name="asteroid">asteroid</string>
    <string name="acid_plant">acid plant</string>
    <string name="reality">reality</string>
    <string name="death_star">death star</string>
    <string name="base">base</string>
    <string name="elemental_rings">elemental rings</string>
    <string name="space">space</string>
    <string name="hell">hell</string>
    <string name="police_department">police department</string>
    <string name="country">сountry</string>
    <string name="consciousness">consciousness</string>
    <string name="memory">memory</string>
    <string name="replacement_dimension">replacement dimension</string>
    <string name="merged_dimension">merged dimension</string>
    <string name="unknown_dimension">unknown dimension</string>
    <string name="fantasy_dimension">fantasy dimension</string>
    <string name="fascist_teddy_bear_dimension">fascist teddy bear dimension</string>
    <string name="wasp_dimension">wasp dimension</string>
    <string name="tusk_dimension">tusk dimension</string>
    <string name="magic_dimension">magic dimension</string>
    <string name="dimension_d716_c">dimension D716-C</string>
    <string name="dimension_j_22">dimension J-22</string>
    <string name="dimension_c_35">dimension C-35</string>
    <string name="dimension_c_137">dimension C-137</string>
    <string name="pizza_dimension">pizza dimension</string>
    <string name="phone_dimension">phone_dimension</string>
    <string name="chair_dimension">chair dimension</string>
    <string name="fascist_dimension">fascist dimension</string>
    <string name="fascist_shrimp_dimension">fascist shrimp dimension</string>
    <string name="giant_telepathic_spiders_dimension">giant telepathic spiders dimension</string>
    <string name="dimension_k_22">dimension K-22</string>
    <string name="dimension_d_99">dimension D-99</string>
    <string name="dimension_d716">dimension D716</string>
    <string name="dimension_d716_b">dimension D716-B</string>
    <string name="testicle_monster_dimension">testicle monster dimension</string>
    <string name="cromulon_dimension">cromulon dimension</string>
    <string name="dimension_c_500a">dimension C-500A</string>
    <string name="dimension_k_83">dimension K-83</string>
    <string name="dimension_j19_7">dimension J19ζ7</string>
    <string name="eric_stoltz_mask_dimension">eric stoltz mask dimension</string>
    <string name="evil_rick_s_target_dimension">evil rick`s target dimension</string>
    <string name="post_apocalyptic_dimension">post-apocalyptic dimension</string>
    <string name="cronenberg_dimension">cronenberg dimension</string>
    <string name="dimension_5_126">dimension 5–126</string>
    <string name="filter_by_location_name">location name…</string>
    <string name="filter_by_location_type">location type…</string>
    <string name="filter_by_location_dimension">location dimension…</string>
    <string name="residents">Residents:</string>
    <string name="retry">Retry</string>
    <string name="no_results">No results 😓</string>
</resources>