<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/item_style">

    <ImageView
        android:id="@+id/character_imageview"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        android:contentDescription="@string/character_imageview" />

    <TextView
        android:id="@+id/character_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/character_imageview"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/character_species_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/species"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/character_imageview"
        app:layout_constraintTop_toBottomOf="@id/character_name_textview" />

    <TextView
        android:id="@+id/character_status_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/character_imageview"
        app:layout_constraintTop_toBottomOf="@id/character_species_textview" />

    <TextView
        android:id="@+id/character_gender_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/character_imageview"
        app:layout_constraintTop_toBottomOf="@id/character_status_textview" />

    <TextView
        android:id="@+id/character_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/character_species_textview"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Rick Sanchez" />

    <TextView
        android:id="@+id/character_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="Human"
        app:layout_constraintTop_toBottomOf="@id/character_name"
        app:layout_constraintStart_toEndOf="@id/character_species_textview"/>

    <TextView
        android:id="@+id/character_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="Alive"
        app:layout_constraintTop_toBottomOf="@id/character_species"
        app:layout_constraintStart_toEndOf="@id/character_species_textview"/>

    <TextView
        android:id="@+id/character_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="Male"
        app:layout_constraintTop_toBottomOf="@id/character_status"
        app:layout_constraintStart_toEndOf="@id/character_species_textview"/>

</androidx.constraintlayout.widget.ConstraintLayout>