<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:paddingTop="8dp"
    android:background="@drawable/border">

    <TextView
        android:id="@+id/location_id_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textStyle="bold"
        style="@style/text_vew_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_vew_style"
        android:textIsSelectable="true"
        app:layout_constraintStart_toEndOf="@id/location_dimension_textview"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="3" />

    <TextView
        android:id="@+id/location_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        style="@style/text_vew_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_id_textview" />

    <TextView
        android:id="@+id/location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_vew_style"
        android:textIsSelectable="true"
        app:layout_constraintStart_toEndOf="@id/location_dimension_textview"
        app:layout_constraintTop_toBottomOf="@id/location_id"
        tools:text="Citadel of Ricks" />

    <TextView
        android:id="@+id/location_type_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textStyle="bold"
        style="@style/text_vew_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_name_textview" />

    <TextView
        android:id="@+id/location_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_vew_style"
        android:textIsSelectable="true"
        tools:text="Space station"
        app:layout_constraintTop_toBottomOf="@id/location_name"
        app:layout_constraintStart_toEndOf="@id/location_dimension_textview"/>

    <TextView
        android:id="@+id/location_dimension_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dimension"
        android:textStyle="bold"
        style="@style/text_vew_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_type_textview" />

    <TextView
        android:id="@+id/location_dimension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_vew_style"
        tools:text="unknown"
        app:layout_constraintTop_toBottomOf="@id/location_type"
        app:layout_constraintStart_toEndOf="@id/location_dimension_textview"/>

    <TextView
        android:id="@+id/location_created_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created"
        android:textStyle="bold"
        style="@style/text_vew_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_dimension_textview" />

    <TextView
        android:id="@+id/location_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_vew_style"
        tools:text="2017-11-10"
        app:layout_constraintTop_toBottomOf="@id/location_dimension"
        app:layout_constraintStart_toEndOf="@id/location_dimension_textview"/>

    <TextView
        android:id="@+id/location_residents_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/residents"
        android:textStyle="bold"
        style="@style/text_vew_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_created_textview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_residents_textview" />

    <TextView
        android:id="@+id/empty_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_type" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/retry"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/empty_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_type" />

</androidx.constraintlayout.widget.ConstraintLayout>