<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/item_style">

    <TextView
        android:id="@+id/episode_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        style="@style/text_vew_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/episode_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_vew_style"
        app:layout_constraintStart_toEndOf="@id/episode_episode_textview"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Pilot" />

    <TextView
        android:id="@+id/episode_episode_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/episode"
        android:textStyle="bold"
        style="@style/text_vew_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episode_name_textview" />

    <TextView
        android:id="@+id/episode_episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_vew_style"
        tools:text="S01E01"
        app:layout_constraintTop_toBottomOf="@id/episode_name"
        app:layout_constraintStart_toEndOf="@id/episode_episode_textview"/>

    <TextView
        android:id="@+id/episode_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/air_date"
        android:textStyle="bold"
        style="@style/text_vew_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episode_episode_textview" />

    <TextView
        android:id="@+id/episode_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_vew_style"
        tools:text="December 2, 2013"
        app:layout_constraintTop_toBottomOf="@id/episode_episode"
        app:layout_constraintStart_toEndOf="@id/episode_episode_textview"/>

</androidx.constraintlayout.widget.ConstraintLayout>